syntax = "proto3";

option java_multiple_files = true;

package com.rationaleemotions.generated;

service UserService {
	rpc basicUserInfo(BasicDetailsRequest) returns (BasicDetails) {}
	rpc preferences(PreferenceRequest) returns (Preferences) {}
}

message PreferenceRequest {
	string username = 1;
}

message Preferences {
	MoviePrefs movies = 1;
	string language = 2;
}

message MoviePrefs {
	repeated uint32 favoriteMovies = 1;
	repeated uint32 recentlyWatched = 2;
}

message BasicDetailsRequest {
	string username = 1;
}

message BasicDetails {
	string username = 1;
	FullName fullName = 2;
	string emailAddress = 3;
}
message FullName {
	string firstName = 1;
	string lastName = 2;
}
